test/memory/allocation/errors/align3-error.chpl
use CTypes;

var ptr = c_aligned_alloc(uint(8), 3, 100);
