test/memory/allocation/errors/align3-error.good
align3-error.chpl:3: error: halt reached - c_aligned_alloc called with non-power-of-2 alignment 3
